# micro_news

./: LICENSE  README.md
backends/c#/: README.md
backends/c#/NewsApi/: NewsApi.csproj  Program.cs
backends/c#/NewsApi/Controllers/: NewsApiController.cs
backends/c#/NewsApi/Properties/: launchSettings.json
backends/java/: .gitignore  README.md  pom.xml
backends/java/src/main/java/: Server.java
backends/node/: README.md  micro_news.js  package-lock.json  package.json
backends/python/: README.md  micro_news.py
backends/rust/: README.md
backends/rust/micro_news/: .gitignore  Cargo.toml
backends/rust/micro_news/src/: main.rs
frontends/react/micro_news/: README.md  package-lock.json  package.json
frontends/react/micro_news/src/: App.js  Article.js  Author.js  TopHeadlines.js
