[package]
name = "micro_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.4"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde_json = "1.0.64"
